<resources>
  <string name="app_name">xyz</string>
  <string name="title_activity_navigation">NavigationActivity</string>
  <string name="title_home">Home</string>
  <string name="title_search">Search</string>
  <string name="title_add">Add</string>
  <string name="title_activity">Activity</string>
  <string name="title_profile">Profile</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="no_posts_explanation">There are no posts in your feed yet!</string>
  <string name="nothing_here">Nothing here</string>
  <string name="post_image">Post Image</string>
  <string name="user_picture_transition">user_picture_transition</string>
  <string name="number_of_comments">%d Comments</string>
  <string name="number_of_likes">%d Likes</string>
  <string name="name_and_date">%1$s - %2$s</string>
  <string name="posts">Posts</string>
  <string name="followers">Followers</string>
  <string name="following">Following</string>
  <string name="select_photo_expl">Click here to select or capture a photo</string>
  <string name="description">Description</string>
  <string name="transition_key_post_image">TRANSITION_POST_IMAGE</string>
  <string name="transition_key_post_container">TRANSITION_KEY_POST_CONTAINER</string>
</resources>
