<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
      name="post"
      type="de.aaronoe.xyz.model.Post"/>
    <variable
      name="viewModel"
      type="de.aaronoe.xyz.ui.postdetail.PostDetailViewModel"/>
    <import type="android.support.v7.widget.LinearLayoutManager"/>
  </data>

  <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:descendantFocusability="blocksDescendants"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <android.support.v7.widget.CardView
        android:id="@+id/post_item_card"
        style="@style/ElevationItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:transitionName="@string/transition_key_post_container"
        app:cardElevation="2dp">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <de.aaronoe.xyz.utils.SquareImageView
            android:id="@+id/feed_item_post_image_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/post_image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_key_post_image"
            app:imageUrl="@{post.mediaUrl}"
            tools:src="@color/colorAccent"/>

          <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/feed_item_profile_picture_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="-24dp"
            android:layout_marginStart="16dp"
            android:transitionName="@string/user_picture_transition"
            app:imageUrl="@{post.author.pictureUrl}"
            tools:src="@drawable/ic_mood_bad_black_24dp"/>

          <TextView
            android:id="@+id/feed_item_profile_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="@{viewModel::newComment}"
            android:text="@{post.author.userName}"
            android:textSize="14sp"
            tools:text="Aaron Oertel"/>

          <TextView
            android:id="@+id/post_item_caption_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{post.caption}"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ex massa, elementum ut mi ut, convallis sodales justo. Nulla ut dictum est. Curabitur nec condimentum libero."/>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
              android:id="@+id/feed_item_likes_tv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@{@string/number_of_likes(post.numberOfLikes)}"
              android:textSize="12sp"
              tools:text="9 Likes"/>

            <TextView
              android:id="@+id/feed_item_comments_tv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:text="@{@string/number_of_comments(post.numberOfComments)}"
              android:textSize="12sp"
              tools:text="5 Comments"/>

          </LinearLayout>

          <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@android:color/darker_gray"/>

        </LinearLayout>

      </android.support.v7.widget.CardView>

      <FrameLayout
        android:id="@+id/comments_container_frame"
        app:startAnimation="@{viewModel.itemAnimation}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:padding="16dp"
          android:visibility="@{viewModel.commentsLoadingVisibility}"/>

        <android.support.v7.widget.RecyclerView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="16dp"
          android:visibility="@{viewModel.commentsListVisibility}"
          app:adapter="@{viewModel.commentAdapter}"
          app:dividers="@{LinearLayoutManager.VERTICAL}"
          app:layoutManager="@{LinearLayoutManager.VERTICAL}"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:padding="16dp"
          android:text="There are no comments yet"
          android:visibility="@{viewModel.commentsErrorVisibility}"/>

      </FrameLayout>

    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

</layout>